# OfficeGhost

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  LICENSE  PHASE_COMPLETE.md  QUICKSTART.md  README.md  SECURITY_FIXES_COMPLETION_REPORT.md  SPRINT_COMPLETION_REPORT.md  SPRINT_SECURITY_FIXES_FINAL_REPORT.md  TODO.md  UPGRADATION_PLAN.md  brutalist_preview.html  capture_screenshots.sh  create_icons.py  design-system.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  run_dashboard.sh  setup.py  test_brutalist_server.py  test_ui.py  tox.ini
.github/workflows/: ci.yml
Cli/: cli.py  main.py
Cli/completion/: bash_completion.sh  zsh_completion.zsh
Core/: __init__.py  config.py  demo_data.py  error_recovery.py  health_monitor.py  logging_config.py  metrics.py  ollama_brain.py  pilot.py  queue_manager.py  retry.py
Dashboard/: app.py  auth.py  notifications.py
Dashboard/static/: brutalist.css  script.js  style.css  style.css.old
Dashboard/templates/: assistant.html  base.html  docs.html  email.html  index.html  landing.html  learning.html  login.html  metrics.html  security.html  settings.html  setup.html
Learning/: __init__.py  memory.py
Marketing/: appsumo_listing.md  email_sequences.md  gumroad_sales_page.md  producthunt_listing.md  reddit_launch_post.md  social_media_posts.md
Modules/assistant/: chat.py  minimal_chat.py  simple_assistant.py  simple_chat.py
Notifications/: notifier.py
Security/: __init__.py  audit.py  auth.py  backup.py  biometric.py  compliance.py  encryption.py  lifecycle.py  network.py  rate_limit.py  session.py  threats.py
Tests/: __init__.py  conftest.py  test_audit.py  test_compliance.py  test_data_extractor.py  test_email_reader.py  test_email_sender.py  test_encryption.py  test_file_analyzer.py  test_file_sorter.py  test_file_watcher.py  test_health_monitor.py  test_integration.py  test_learning.py  test_ollama_brain.py  test_queue_manager.py  test_security_fixes.py
docs/: API.md  DEPLOYMENT.md
migrations/: __init__.py
monitoring/: prometheus.yml
screenshots/: LAUNCH_READINESS_REPORT.md  PWA_TEST_REPORT.md  SCREENSHOT_GUIDE.md  SECURITY_AUDIT_REPORT.md
ui-upgrade/: index.html  package-lock.json  package.json  tailwind.config.js
(+35 files in other folders)
